--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Remofy - AI Background Remover</title>
+    <title>StoreFront AI - Modern Store Presence</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', sans-serif;
       }
-      .gradient-bg {
-        background: radial-gradient(circle at top right, #fdf2f8, #ffffff, #eff6ff);
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.8s ease-out forwards;
+      }
+      .animation-delay-300 {
+        animation-delay: 0.3s;
       }
     </style>
   <script type="importmap">
@@ -27,7 +34,7 @@
 }
 </script>
 </head>
-  <body class="gradient-bg min-h-screen">
+  <body class="bg-white">
     <div id="root"></div>
   </body>
 </html>
